Complete dashboard feature

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        buildConfigField "String", "BASE_URL", "\"http://happydeliv.com/api/\""
+        buildConfigField "String", "BASE_URL", "\"http://happydeliv.com\""
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
