--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,6 +121,10 @@ dependencies {
     //Firebase
     compile 'com.google.firebase:firebase-core:11.8.0'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
