--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,11 +120,16 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:11.8.0'
 
     //Firebase
-    compile 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.6.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+
+    //Handling Permission
+    implementation 'gun0912.ted:tedpermission-rx2:2.1.0'
 
 }
 
